[gd_scene load_steps=4 format=3 uid="uid://pqkrcth20qy"]

[ext_resource type="Script" path="res://scenes/selector/btnFileDialog.gd" id="1_bpixv"]
[ext_resource type="Script" path="res://scenes/selector/btnProcess.gd" id="2_5c46i"]
[ext_resource type="Script" path="res://scenes/selector/OpenLast.gd" id="3_2lorg"]

[node name="selector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FileDialog" type="FileDialog" parent="Panel"]
title = "Open a File"
initial_position = 1
size = Vector2i(600, 600)
popup_window = true
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.png", "*.jpg")

[node name="GridContainer" type="GridContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.0
offset_top = -13.0
offset_right = 81.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="lbImgPath" type="Label" parent="Panel/GridContainer"]
layout_mode = 2
text = "Tile Width"

[node name="btnFileDialog" type="Button" parent="Panel/GridContainer"]
layout_mode = 2
text = "Select File"
script = ExtResource("1_bpixv")

[node name="lblTW" type="Label" parent="Panel/GridContainer"]
layout_mode = 2
text = "Tile Width"

[node name="txtTileWidth" type="TextEdit" parent="Panel/GridContainer"]
custom_minimum_size = Vector2(60, 10)
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/line_spacing = -2
text = "12
"
placeholder_text = "12"

[node name="lblTH" type="Label" parent="Panel/GridContainer"]
layout_mode = 2
text = "Tile Height
"

[node name="txtTileHeight" type="TextEdit" parent="Panel/GridContainer"]
custom_minimum_size = Vector2(60, 10)
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/line_spacing = -2
text = "12"
placeholder_text = "12"

[node name="lblOffset" type="Label" parent="Panel/GridContainer"]
layout_mode = 2
text = "Tile Offset"

[node name="txtTileOffset" type="TextEdit" parent="Panel/GridContainer"]
custom_minimum_size = Vector2(60, 10)
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/line_spacing = -2
text = "0"
placeholder_text = "1"

[node name="lblMargin" type="Label" parent="Panel/GridContainer"]
layout_mode = 2
text = "Margin"

[node name="txtMargin" type="TextEdit" parent="Panel/GridContainer"]
custom_minimum_size = Vector2(60, 10)
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/line_spacing = -2
text = "0
"
placeholder_text = "1"

[node name="btnProcess" type="Button" parent="Panel/GridContainer"]
layout_mode = 2
disabled = true
text = "Process
"
script = ExtResource("2_5c46i")

[node name="OpenLast" type="Button" parent="."]
layout_mode = 0
offset_left = 524.0
offset_top = 111.0
offset_right = 611.0
offset_bottom = 142.0
disabled = true
text = "Open Last
"
script = ExtResource("3_2lorg")

[connection signal="file_selected" from="Panel/FileDialog" to="Panel/GridContainer/btnFileDialog" method="_on_file_dialog_file_selected"]
[connection signal="pressed" from="Panel/GridContainer/btnFileDialog" to="Panel/GridContainer/btnFileDialog" method="_on_pressed"]
[connection signal="pressed" from="Panel/GridContainer/btnProcess" to="Panel/GridContainer/btnProcess" method="_on_pressed"]
[connection signal="pressed" from="OpenLast" to="OpenLast" method="_on_pressed"]
